@startuml

entity "Warehouse" {
    * id : number
    * Designation : varchar(255)
    * AddressId : number
    * GeographicCoordinatesId : number
}

entity "Address" {
    * AddressId : number
    * Street : varchar(255)
    * City : varchar(255)
    * State : varchar(255)
    * Zip Code : varchar(255)
}

entity "GeographicCoordinates" {
    * GeographicCoordinatesId : number
    * Latitude : double
    * Longitude : double
}

"Warehouse" ||--|{ "Address" : "has"
"Warehouse" ||--|{ "GeographicCoordinates" : "has"

@enduml